# statistics-cgp

./: .gitignore  CMakeLists.txt  README.md  blocking.h  cgp_statistics.cxx  compressors.cxx  compressors.hxx  plot.py  roi.h  supervoxels.cxx  supervoxels.hxx
config/: FindCGP.cmake  FindChatty.cmake  FindVecVec.cmake  FindVigra.cmake
